Added resource content

--- a/resources.html
+++ b/resources.html
@@ -35,7 +35,7 @@
                             </a>
                         </div>
                         <div class="nav-button">
-                            <a href="#purpose">
+                            <a href="./index.html#purpose">
                                 <i class="fa-solid fa-lightbulb">
                                     <span class="header-txt">Purpose</span>
                                 </i>
@@ -61,7 +61,104 @@
         </div>
     </header>
     <main>
-        <h1 style="margin-top: 200px; text-align: center; height: 90vh;">Books and stuff here</h1>
+        <section class="resources-section">
+            <div class="container-body">
+                <h2 class="resource-main-title">Free E-Books & Guides</h2>
+                <p class="resource-main-description">Download these comprehensive guides to learn about sleep science, improvement techniques, and evidence-based strategies for better rest.</p>
+                
+                <div class="resource-container">
+                    <div class="resource-card">
+                        <div class="resource-icon">
+                            <i class="fa-solid fa-brain" style="color: white; font-size: 24px;"></i>
+                        </div>
+                        <h3 class="resource-title">Sleep & Mental Health</h3>
+                        <div class="resource-info">
+                            <span class="resource-type">Research Paper</span>
+                            <span>87 pages</span>
+                        </div>
+                        <p class="resource-description">Explore the bidirectional relationship between sleep and mental health, including impacts on anxiety, depression, and cognitive function.</p>
+                        <a href="https://www.ncbi.nlm.nih.gov/pmc/articles/PMC6172741/" class="button-primary rb1" target="_blank">
+                            <i class="fa-solid fa-download"></i> Download PDF
+                        </a>
+                        <a href="https://www.sleepfoundation.org/mental-health" class="button-secondary rb1" target="_blank">
+                            <i class="fa-solid fa-eye"></i> Read Online
+                        </a>
+                    </div>
+
+                    <div class="resource-card">
+                        <div class="resource-icon">
+                            <i class="fa-solid fa-bed" style="color: white; font-size: 24px;"></i>
+                        </div>
+                        <h3 class="resource-title">Sleep Hygiene Handbook</h3>
+                        <div class="resource-info">
+                            <span class="resource-type">Practical Guide</span>
+                            <span>65 pages</span>
+                        </div>
+                        <p class="resource-description">Practical tips and evidence-based strategies for creating the perfect sleep environment and developing healthy sleep habits.</p>
+                        <a href="https://www.cdc.gov/sleep/about_sleep/sleep_hygiene.html" class="button-primary rb1" target="_blank">
+                            <i class="fa-solid fa-download"></i> Download PDF
+                        </a>
+                        <a href="https://www.sleepfoundation.org/sleep-hygiene" class="button-secondary rb1" target="_blank">
+                            <i class="fa-solid fa-eye"></i> View Guide
+                        </a>
+                    </div>
+
+                    <div class="resource-card">
+                        <div class="resource-icon">
+                            <i class="fa-solid fa-chart-line" style="color: white; font-size: 24px;"></i>
+                        </div>
+                        <h3 class="resource-title">Sleep Tracking & Analysis</h3>
+                        <div class="resource-info">
+                            <span class="resource-type">Interactive Guide</span>
+                            <span>45 pages</span>
+                        </div>
+                        <p class="resource-description">Learn how to effectively track your sleep patterns and interpret sleep data to optimize your rest quality.</p>
+                        <a href="https://www.sleepfoundation.org/sleep-diary" class="button-primary rb1" target="_blank">
+                            <i class="fa-solid fa-download"></i> Download Tools
+                        </a>
+                        <a href="https://www.sleepfoundation.org/sleep-diary" class="button-secondary rb1" target="_blank">
+                            <i class="fa-solid fa-eye"></i> Start Tracking
+                        </a>
+                    </div>
+
+                    <div class="resource-card">
+                        <div class="resource-icon">
+                            <i class="fa-solid fa-baby" style="color: white; font-size: 24px;"></i>
+                        </div>
+                        <h3 class="resource-title">Sleep Across Lifespan</h3>
+                        <div class="resource-info">
+                            <span class="resource-type">Comprehensive Guide</span>
+                            <span>120 pages</span>
+                        </div>
+                        <p class="resource-description">Understanding sleep needs from infancy to elderly years, with age-specific recommendations and common sleep challenges.</p>
+                        <a href="https://www.sleepfoundation.org/how-sleep-works/how-much-sleep-do-we-really-need" class="button-primary rb1" target="_blank">
+                            <i class="fa-solid fa-download"></i> Download PDF
+                        </a>
+                        <a href="https://www.sleepfoundation.org/children-and-sleep" class="button-secondary rb1" target="_blank">
+                            <i class="fa-solid fa-eye"></i> Browse Topics
+                        </a>
+                    </div>
+
+                    <div class="resource-card">
+                        <div class="resource-icon">
+                            <i class="fa-solid fa-moon" style="color: white; font-size: 24px;"></i>
+                        </div>
+                        <h3 class="resource-title">Sleep Disorders Guide</h3>
+                        <div class="resource-info">
+                            <span class="resource-type">Medical Reference</span>
+                            <span>98 pages</span>
+                        </div>
+                        <p class="resource-description">Comprehensive overview of common sleep disorders including sleep apnea, insomnia, restless leg syndrome, and treatment options.</p>
+                        <a href="https://www.nhlbi.nih.gov/health/sleep-disorders" class="button-primary rb1" target="_blank">
+                            <i class="fa-solid fa-download"></i> Download Guide
+                        </a>
+                        <a href="https://www.sleepfoundation.org/sleep-disorders" class="button-secondary rb1" target="_blank">
+                            <i class="fa-solid fa-eye"></i> Learn More
+                        </a>
+                    </div>
+                </div>
+            </div>
+        </section>
     </main>
 
     <footer>
