--- a/index.html
+++ b/index.html
@@ -273,7 +273,7 @@
             <div class="feedback-desc">
                 Your thoughts help us improve! If you've explored our site or learned something new, please take a moment to share your feedback. It only takes a minute.
                 <div class="button-container">
-                    <a href="#purpose">
+                    <a href="https://docs.google.com/forms/d/e/1FAIpQLSensE41AgmLzW_l2C2_2F7LEBYOsxpQUn7FePN5d3TVqK3XSQ/viewform?usp=dialog" target="_blank" rel="noopener noreferrer">
                         <button type="button" class="button-primary">Feedback Form</button>
                     </a>
                 </div>
